# riptide_controller_simulink

./: Build_Porportional_Follower.m  CMakeLists.txt  FaultControllerTest.slx  Fault_Tolerant_Controller.slx  Porportional_Follower.slx  TestController.slx
FaultControllerModel_ert_shrlib_rtw/: CMakeLists.txt  FaultControllerModel.c  FaultControllerModel.def  FaultControllerModel.h  FaultControllerModel_private.h  FaultControllerModel_types.h  buildInfo.mat  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  ert_main.c  rtGetInf.c  rtGetInf.h  rtGetNaN.c  rtGetNaN.h  rt_nonfinite.c  rt_nonfinite.h  rtw_proj.tmw  rtwtypes.h  rtwtypeschksum.mat
FaultControllerModel_ert_shrlib_rtw/tmwinternal/: tr
Porportional_Follower_Test_ert_shrlib_rtw/: CMakeLists.txt  Porportional_Follower_Test.c  Porportional_Follower_Test.def  Porportional_Follower_Test.h  Porportional_Follower_Test_private.h  Porportional_Follower_Test_types.h  buildInfo.mat  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  ert_main.c  rtw_proj.tmw  rtwtypes.h  rtwtypeschksum.mat
Porportional_Follower_Test_ert_shrlib_rtw/tmwinternal/: tr
slprj/ert/Porportional_Follower_Test/tmwinternal/: BlockTraceInfo.mat  CompileInfo.xml  binfo.mat  minfo.mat
slprj/ert/TestController/tmwinternal/: sinfo.mat
slprj/ert/_sharedutils/: shared_file.dmr
slprj/ert_shrlib/Porportional_Follower_Test/tmwinternal/: BlockTraceInfo.mat  CompileInfo.xml  binfo.mat  minfo.mat
slprj/ert_shrlib/TestController/tmwinternal/: sinfo.mat
slprj/ert_shrlib/_sharedutils/: shared_file.dmr
